--- a/eIVOGo/default.htm
+++ b/eIVOGo/default.htm
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script>
-        window.location.href = 'Account/Login';
+        window.location.href = 'Account/CbsLogin';
     </script>
 </head>
 <body>
